--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,24 +3,24 @@
 
 joe:
   id: 1
-  name: Joe
+  name: joe
   email: joe@fake.com
   details: 'really awesome'
 
 mama:
   id: 2
-  name: Mama
+  name: mama
   email: mama@fake.com
   details: 'also really awesome'
 
 papa:
   id: 3
-  name: Papa
+  name: papa
   email: papa@fake.com
   details: 'also really awesome'
 
 donald:
   id: 4
-  name: Donald
+  name: donald
   email: donald@fake.com
   details: 'not awesome at all'
