--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -3,5 +3,12 @@
 
 one: 
   body: 'old text'
+  user: joe
+
 two:
   body: 'more old text'
+  user: mama
+
+three:
+  body: 'not interesting'
+  user: donald
