--- a/test/fixtures/friendships.yml
+++ b/test/fixtures/friendships.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user_id: 1
-  friend_id: 2
+  user: joe
+  friend: mama
 
 two:
-  user_id: 2
-  friend_id: 1
+  user: mama
+  friend: joe
